--- a/grandchild/model.config
+++ b/grandchild/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>grandchild</name>
+  <name>grandchild_c</name>
   <version>1.0</version>
   <sdf version='1.7'>grandchild.sdf</sdf>
 
